--- a/hands-on-curso-front-end-1-master/index.html
+++ b/hands-on-curso-front-end-1-master/index.html
@@ -4,23 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meu site</title>
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
   <!-- Header -->
   <header>
     <img src="./assets/images/logo.png" alt="Logo">
-  </header>
-   <!-- End Header -->
     <!-- Menu site -->
-  <nav>
-    <ul>
-      <li>Home</li>
-      <li>Sobre</li>
-      <li>Portfólio</li>
-      <li>Contato</li>
-      <li>Currículo</li>
-    </ul>
-  </nav>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Sobre</li>
+        <li>Portfólio</li>
+        <li>Contato</li>
+        <li>Currículo</li>
+      </ul>
+    </nav>
+  </header>
+  <!-- End Header -->
   <!-- End Menu site -->
   <!-- Container -->
   <main>
