--- a/hands-on-curso-front-end-1-master/index.html
+++ b/hands-on-curso-front-end-1-master/index.html
@@ -8,54 +8,55 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <img src="./assets/images/logo.png" alt="Logo">
+  <header class="container">
+    <section class="row">
+      <img src="./assets/images/logo.png" alt="Logo">
     <!-- Menu site -->
-    <nav>
-      <ul>
-        <li>
-          <a href="#">
-            Home
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Sobre
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Portfólio
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Contato
-          </a>  
-        </li>
-        <li>
-          <a href="#" class="btn btn-laranja">
-            Currículo
-          </a>
-        </li>
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Sobre
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Portfólio
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Contato
+            </a>  
+          </li>
+          <li>
+            <a href="#" class="btn btn-laranja">
+              Currículo
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </section>
   </header>
   <!-- End Header -->
   <!-- End Menu site -->
   <!-- Container -->
-  <main>
+  <main class="container">
     <!-- Section content -->
-    <section>
+    <section class="row sobre-web-design">
       <!-- Article content -->
       <article>
         <h1>Web Design</h1>
         <h2>Landing Page</h2>
 
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </p>
-        <a href="$">Saiba Mais</a>
+        <a href="$" class="btn btn-laranja">Saiba Mais</a>
       </article>
       <!-- End Article content -->
       <figcaption>
@@ -67,8 +68,8 @@
   </main>
   <!-- End Main -->
   <!-- Footer content -->
-  <footer>
-    <ul>
+  <footer class="container">
+    <ul class="row">
       <li>
         <a href="#" alt="Twitter"> 
           <img src="./assets/images/logo-twitter.png">
